Bug 584305 Define no extern "C" version ObjectOps to fix build issue with Solaris Studio r=brendan